k8s/spring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-elk-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-elk-app
  template:
    metadata:
      labels:
        app: spring-elk-app
    spec:
      containers:
        - name: spring-elk-app
          image: wesleyeduardodev/crud-usuario-elk-api
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
            limits:
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: spring-elk-app
spec:
  selector:
    app: spring-elk-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
